--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "@stylistic/eslint-plugin": "^5.2.3",
         "@types/express": "^5.0.3",
         "@types/node": "^22.13.14",
+        "@types/supertest": "^6.0.3",
         "@typescript-eslint/parser": "^8.39.1",
         "@vitest/coverage-v8": "^3.2.4",
         "eslint-plugin-import": "^2.32.0",
         "globals": "^16.3.0",
+        "supertest": "^7.2.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.2",
         "typescript-eslint": "^8.39.1",
