--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "test": "vitest run",
         "test:cov": "vitest run --coverage",
         "deploy": "git pull origin main && yarn install && yarn build && pm2 restart gemini-proxy"
-
     },
     "engines": {
         "node": ">20.0.0"
@@ -27,6 +26,7 @@
         "@commander-js/extra-typings": "^14.0.0",
         "chalk": "^5.6.0",
         "commander": "^14.0.0",
+        "compression": "^1.8.1",
         "express": "^5.1.0",
         "google-auth-library": "^10.2.1",
         "open": "^10.2.0"
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@eslint/js": "^9.33.0",
         "@stylistic/eslint-plugin": "^5.2.3",
+        "@types/compression": "^1.8.1",
         "@types/express": "^5.0.3",
         "@types/node": "^22.13.14",
         "@types/supertest": "^6.0.3",
