--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
         "lint": "eslint . --ext .ts",
         "test": "vitest run",
         "test:cov": "vitest run --coverage",
-        "deploy": "git pull origin main && yarn install && yarn build && pm2 restart gemini-proxy"
+        "deploy": "git pull origin main && yarn install && yarn build && pm2 restart gemini-proxy",
+        "auth:list": "node --loader ts-node/esm src/auth/cli.ts list",
+        "auth:add": "node --loader ts-node/esm src/auth/cli.ts add",
+        "auth:remove": "node --loader ts-node/esm src/auth/cli.ts remove",
+        "auth:counts": "node --loader ts-node/esm src/auth/cli.ts counts"
     },
     "engines": {
         "node": ">20.0.0"
@@ -25,10 +29,12 @@
     "dependencies": {
         "@commander-js/extra-typings": "^14.0.0",
         "chalk": "^5.6.0",
+        "cli-table3": "^0.6.5",
         "commander": "^14.0.0",
         "express": "^5.1.0",
         "google-auth-library": "^10.2.1",
         "open": "^10.2.0",
+        "qrcode-terminal": "^0.12.0",
         "undici": "^7.18.2"
     },
     "devDependencies": {
@@ -36,6 +42,7 @@
         "@stylistic/eslint-plugin": "^5.2.3",
         "@types/express": "^5.0.3",
         "@types/node": "^22.13.14",
+        "@types/qrcode-terminal": "^0.12.2",
         "@types/supertest": "^6.0.3",
         "@typescript-eslint/parser": "^8.39.1",
         "@vitest/coverage-v8": "^3.2.4",
